snapshots/aws_nlb_targets_instance_nacl_test/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0dc5e1e2cdd5f7b4b",
     "NetworkAclId": "acl-0c067972c83748b7b",
     "SubnetId": "subnet-0539dea33de462cc7"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0c067972c83748b7b",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_target_nacl_tip_nni"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-02c61dcc39f020477",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0fdc273e8ee75373c",
     "NetworkAclId": "acl-03daada62d3090506",
     "SubnetId": "subnet-01b9e0176f7ad64e6"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "10.2.104.100/32",
     "Egress": false,
     "PortRange": {
      "From": 1024,
      "To": 65535
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 30
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-03daada62d3090506",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_nlb_nacl_tip_nni"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0e81d729531f1053a",
     "NetworkAclId": "acl-05483582dc95d5e13",
     "SubnetId": "subnet-0a88259c7e487ec9b"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "8.8.8.8/32",
     "Egress": false,
     "PortRange": {
      "From": 80,
      "To": 80
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 30
    },
    {
     "CidrBlock": "67.160.71.197/32",
     "Egress": false,
     "PortRange": {
      "From": 80,
      "To": 80
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 40
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-05483582dc95d5e13",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_target_nacl_cip_tni"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-06a14442630cd3310",
     "NetworkAclId": "acl-01083bebfacc9bc2c",
     "SubnetId": "subnet-08362fcb1334df6b0"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "10.2.5.156/32",
     "Egress": false,
     "PortRange": {
      "From": 80,
      "To": 80
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 30
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-01083bebfacc9bc2c",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_target_nacl_nip_tni"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-011725476d943b479",
     "NetworkAclId": "acl-07f9b0babf4880f54",
     "SubnetId": "subnet-0416a2a5d96739831"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "8.8.8.8/32",
     "Egress": true,
     "PortRange": {
      "From": 1024,
      "To": 65535
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 30
    },
    {
     "CidrBlock": "67.160.71.197/32",
     "Egress": true,
     "PortRange": {
      "From": 1024,
      "To": 65535
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 40
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-07f9b0babf4880f54",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_target_nacl_cip_tno"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0be09080e7e3b076a",
     "NetworkAclId": "acl-0c671b574e9216df8",
     "SubnetId": "subnet-03b8b61682387905e"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0c671b574e9216df8",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_nlb_nacl_cip_tni"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0f39011fecd9ee512",
     "NetworkAclId": "acl-0822f2745369e01d2",
     "SubnetId": "subnet-030f2e6325c6e0000"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "10.2.101.100/32",
     "Egress": true,
     "PortRange": {
      "From": 80,
      "To": 80
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0822f2745369e01d2",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_nlb_nacl_tip_nno"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0d951006de8e05427",
     "NetworkAclId": "acl-05410261aac525cda",
     "SubnetId": "subnet-0f9476d3ca3dd010f"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-05410261aac525cda",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_target_nacl_tip_nno"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0ca627a762209ab74",
     "NetworkAclId": "acl-081a14eeefbbb8ec1",
     "SubnetId": "subnet-0be7859c77569fcb7"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-081a14eeefbbb8ec1",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_nlb_nacl_cip_tno"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-02804ed18ef7ea104",
     "NetworkAclId": "acl-08f64796ab090ed48",
     "SubnetId": "subnet-05c09028af3894dbc"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-08f64796ab090ed48",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "jump_general"
    }
   ],
   "VpcId": "vpc-07e67f8be0eda8611"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-02891b617b4dd1d33",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-07e67f8be0eda8611"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0fcdffbd487af2944",
     "NetworkAclId": "acl-0e8a5e0e0b4231b85",
     "SubnetId": "subnet-04d23888d4d68e19a"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0e8a5e0e0b4231b85",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nlb_target_id_nlb_nacl_nip_tni"
    }
   ],
   "VpcId": "vpc-002ec6f45fe8fd361"
  }
 ]
}
